[tool.poetry]
name = "unicorn-binance-local-depth-cache"
version = "2.0.0"
description = "A Python SDK by LUCIT for accessing and managing multiple local Binance order books with Python in a simple, fast, flexible, robust and fully featured way."
authors = ["LUCIT Systems and Development <info@lucit.tech>"]
license = "LSOSL - LUCIT Synergetic Open Source License"
readme = "README.md"
homepage = "https://www.lucit.tech/unicorn-binance-local-depth-cache.html"
documentation = "https://unicorn-binance-local-depth-cache.docs.lucit.tech"
repository = "https://github.com/LUCIT-Systems-and-Development/unicorn-binance-local-depth-cache"

[tool.poetry.urls]
'Howto' = 'https://www.lucit.tech/unicorn-binance-local-depth-cache.html#howto'
'Documentation' = 'https://unicorn-binance-local-depth-cache.docs.lucit.tech'
'Wiki' = 'https://github.com/LUCIT-Systems-and-Development/unicorn-binance-local-depth-cache/wiki'
'Author' = 'https://www.lucit.tech'
'Changes' = 'https://unicorn-binance-local-depth-cache.docs.lucit.tech/changelog.html'
'License' = 'https://unicorn-binance-local-depth-cache.docs.lucit.tech/license.html'
'Issue Tracker' = 'https://github.com/LUCIT-Systems-and-Development/unicorn-binance-local-depth-cache/issues'
'Telegram' = 'https://t.me/unicorndevs'
'Chat' = 'https://app.gitter.im/#/room/#unicorn-binance-suite_unicorn-binance-local-depth-cache:gitter.im'
'Get Support' = 'https://www.lucit.tech/get-support.html'
'LUCIT Online Shop' = 'https://shop.lucit.services/software/unicorn-binance-suite'

[tool.poetry.dependencies]
python = ">=3.7.0"
lucit-licensing-python = ">=1.8.2"
requests = ">=2.31.0"
unicorn-binance-rest-api = ">=2.6.1"
unicorn-binance-websocket-api = ">=2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "wheel", "Cython", "pip", "mypy"]
build-backend = "setuptools.build_meta"

[tool.poetry.package_data]
unicorn_binance_websocket_api = ["*.so", "*.dll", "*.py", "*.pyd", "*.pyi"]